# SPDX-License-Identifier: MIT-0

bazel_dep(name = "lcm", version = "1.5.1")

# This example uses lcm from our same git checkout. In most cases, you'll want
# to remove this override in your own projects.
local_path_override(
    module_name = "lcm",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_python", version = "0.40.0")

# Caveat: Glib's default pcre2 is too old; we need to use the next RC for now.

PCRE_VER = "pcre2-10.45-RC1"

archive_override(
    module_name = "pcre2",
    integrity = "sha256-UJVt+c2QCm3PpjlvuUb55k+ZyjszWhtPmbupE09YIU4=",
    strip_prefix = PCRE_VER,
    url = "https://github.com/PCRE2Project/pcre2/releases/download/{}/{}.tar.bz2".format(
        PCRE_VER,
        PCRE_VER,
    ),
)
